Вся логика связанная с повтрениями перенесена из Word в WordService